# WebHookGloriaFoodCloudflare

./: .replit  cf-requirements.txt  main.py  pyproject.toml  wrangler.toml
attached_assets/: Pasted--Serving-Flask-app-main-Debug-mode-off-WARNING-This-is-a-development-server-Do-not-use-i-1758590182121_1758590182122.txt  Pasted-1-DATOS-CRUDOS-RECIBIDOS-DEL-WEBHOOK-count-1-orders-instructions--1758588250030_1758588250032.txt
