[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gloriafood-webhook"
version = "0.1.0"
description = "Webhook handler for GloriaFood integration with Smart Passes"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.8"
dependencies = []

[tool.hatch.metadata]
allow-direct-references = true